--- a/PhoneShop/PhoneShop/Views/Home/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using PhoneShop.code
 @model PhoneShop.ViewModels.HomeViewModel
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+<script src="~/Scripts/jquery.cookie.js"></script>
 <link href="~/Content/homeStyle.css" rel="stylesheet" />
 
 <div class="page-title parallax">
