--- a/PhoneShop/PhoneShop/Views/Product/ProductTable.cshtml
+++ b/PhoneShop/PhoneShop/Views/Product/ProductTable.cshtml
@@ -46,9 +46,7 @@
                 {
                     <tr>
                         <td>@product.Name</td>
-                        <td>
-                            @product.Category.Name
-                        </td>
+                        <td> @product.Category.Name</td>
                         <td>@product.Price</td>
                         <td>
                             <button class="editBtn" data-id="@product.ID">Edit</button>
