--- a/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
+++ b/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title 手機商店</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 </head>
@@ -16,13 +16,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("手機商店", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (Session["Member"] == null && Session["Admin"] == null)
+                    {
+                        <li>@Html.ActionLink("註冊", "Register", "Home")</li>
+                        <li>@Html.ActionLink("登入", "Login", "Home")</li>
+                    }
+                    else if (Session["Admin"] != null)
+                    {
+                        <li>@Html.ActionLink("產品種類", "Index", "Category")</li>
+                        <li>@Html.ActionLink("產品", "Index", "Product")</li>
+                        <li>@Html.ActionLink("訂單", "Index", "Order")</li>
+                        <li>@Html.ActionLink("管理者登出", "Logout", "Home")</li>
+                        <li><a href="#">@Session["WelCome"]</a></li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("購物車", "ShoppingCart", "Home")</li>
+                        <li>@Html.ActionLink("登出", "Logout", "Home")</li>
+                        <li><a href="#">@Session["WelCome"]</a></li>
+                    }
                 </ul>
             </div>
         </div>
@@ -31,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year 手機商店</p>
         </footer>
     </div>
 </body>
