--- a/PhoneShop/PhoneShop/Views/Home/Login.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Login.cshtml
@@ -27,6 +27,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="登入" class="btn btn-default" />
+                @ViewBag.Message
             </div>
         </div>
      </div>
