--- a/PhoneShop/PhoneShop/Views/Order/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
-<link href="~/Content/homeStyle.css" rel="stylesheet" />
+<link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
 <section>
     <div class="container">
