--- a/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
@@ -10,10 +10,20 @@
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
 <div class="filter-shop clearfix">
-    <p class="showing-product float-right text-center">
-        顯示 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + 1) 至 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + (Model.Products.Count < Model.Pager.PageSize ? Model.Products.Count : Model.Pager.PageSize)) 個 ，共 @Model.Pager.TotalItems 個產品
-    </p>
-</div><!-- /.filte-shop -->
+    @if (Model.Pager.TotalItems > 0)
+    {
+        <p class="showing-product float-right">
+            顯示 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + 1) 至 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + (Model.Products.Count < Model.Pager.PageSize ? Model.Products.Count : Model.Pager.PageSize)) 個，
+            共 @Model.Pager.TotalItems 個產品
+        </p>
+    }
+    else
+    {
+        <p class="showing-product float-right">
+            共 @Model.Pager.TotalItems 個產品
+        </p>
+    }
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-9">
@@ -42,7 +52,7 @@
                 </div>
             }
         </div>
-    </div><!-- /.product-content -->
+    </div>
 </div>
 <div class="container">
     <div class="row">
@@ -69,11 +79,11 @@
                         {
                             <li><a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = Model.Pager.CurrentPage + 1, sortBy = Model.SortBy, categoryID = Model.CategoryID})" class="pageDataLink"><i class="fa fa-angle-right"></i></a></li>
                         }
-                    </ul><!-- /.flat-pagination -->
+                    </ul>
                 </div>
             }
         </div>
-    </div><!-- /.product-content -->
+    </div>
 </div>
 <input type="hidden" id="SearchTerm" value="@Model.SearchTerm" />
 <input type="hidden" id="SortBy" value="@Model.SortBy" />
