--- a/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
@@ -33,8 +33,8 @@
                                 </li>
                             }
 
-                            <li class="list-group-item d-flex justify-content-between">
-                                <span>總價</span>
+                            <li class="list-group-item d-flex justify-content-between" style="text-align: right">
+                                <span>總價:</span>
                                 <strong>NT$ @Model.CartProducts.Sum(x => x.Price * Model.CartProductIDs.Where(productID => productID == x.ID).Count())</strong>
                             </li>
                         </ul>
