--- a/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
+++ b/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
@@ -11,11 +11,6 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 @Html.ActionLink("手機商店", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
@@ -23,23 +18,29 @@
                     @if (Session["Member"] == null && Session["Admin"] == null)
                     {
                         <li>@Html.ActionLink("購物車", "ShoppingCart", "Home")</li>
-                        <li>@Html.ActionLink("註冊", "Register", "Home")</li>
-                        <li>@Html.ActionLink("登入", "Login", "Home")</li>
                     }
                     else if (Session["Admin"] != null)
                     {
                         <li>@Html.ActionLink("產品種類", "Index", "Category")</li>
                         <li>@Html.ActionLink("產品", "Index", "Product")</li>
-                        <li>@Html.ActionLink("訂單", "Index", "Order")</li>
-                        <li>@Html.ActionLink("登出", "Logout", "Home")</li>
-                        <li><a href="#">@Session["WelCome"]</a></li>
+                        <li>@Html.ActionLink("訂單管理", "Index", "Order")</li>
                     }
                     else
                     {
                         <li>@Html.ActionLink("購物車", "ShoppingCart", "Home")</li>
-                        <li>@Html.ActionLink("訂單", "Index", "Order")</li>
-                        <li>@Html.ActionLink("登出", "Logout", "Home")</li>
+                        <li>@Html.ActionLink("訂單查詢", "Index", "Order")</li>
+                    }
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (Session["Member"] == null && Session["Admin"] == null)
+                    {
+                        <li>@Html.ActionLink("註冊", "Register", "Home")</li>
+                        <li>@Html.ActionLink("登入", "Login", "Home")</li>
+                    }
+                    else
+                    {
                         <li><a href="#">@Session["WelCome"]</a></li>
+                        <li>@Html.ActionLink("登出", "Logout", "Home")</li>
                     }
                 </ul>
             </div>
