--- a/PhoneShop/PhoneShop/Content/stylesheets/homeStyle.css
+++ b/PhoneShop/PhoneShop/Content/stylesheets/homeStyle.css
@@ -130,14 +130,13 @@
 }
 
 .widget.widget-price .amount input[type="text"] {
-    width: 75%;
-    border: none;
     font-size: 14px;
     line-height: 21px;
     color: #333333;
     font-weight: 300;
     letter-spacing: 0px;
     padding-left: 0px;
+    text-align: center
 }   
 
 .filter-shop {
