--- a/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
@@ -10,20 +10,15 @@
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
 <div class="filter-shop clearfix">
-    @if (Model.Pager.TotalItems > 0)
-    {
-
-        <p class="showing-product"  style="float: right">
-             顯示 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + 1) 至 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + (Model.Products.Count < Model.Pager.PageSize ? Model.Products.Count : Model.Pager.PageSize)) 個，
-            共 @Model.Pager.TotalItems 個產品
-        </p>
-    }
-    else
-    {
-        <p class="showing-product float-right">
-            共 @Model.Pager.TotalItems 個產品
-        </p>
-    }
+    <p class="showing-product" style="float: right">
+        @if (Model.Pager.TotalItems > 0)
+        {
+           <text>顯示 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + 1) 至 @(((Model.Pager.CurrentPage - 1) * Model.Pager.PageSize) + (Model.Products.Count< Model.Pager.PageSize ? Model.Products.Count : Model.Pager.PageSize)) 個，</text>
+        }
+        共 @Model.Pager.TotalItems 個產品
+    </p>
+    
+    
 </div>
 
 @foreach (var product in Model.Products)
