--- a/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
@@ -4,93 +4,91 @@
 <script src="~/Scripts/jquery.cookie.js"></script>
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
-<div style=" padding: 80px 0px 30px 0px">
-
-</div>
-
 @if (Model != null && Model.CartProducts != null && Model.CartProducts.Count > 0)
 {
-    <section class="flat-row main-shop shop-slidebar">
-        <div class="container">
-            <div class="row">
-                @if (Session["Member"] != null)
-                {
-                    <div class="col-md-4 order-md-2 mb-4 col-md-offset-2">
-                        <h4 class="d-flex justify-content-between align-items-center mb-3">
-                            <span class="text-muted">購物車清單</span>
-                        </h4>
-                        <ul class="list-group mb-3">
-                            @foreach (var product in Model.CartProducts)
-                            {
-                                var productQuantity = Model.CartProductIDs.Where(productID => productID == product.ID).Count();
+    <div style=" padding: 80px 0px 30px 0px">
+        <section class="flat-row main-shop shop-slidebar">
+            <div class="container">
+                <div class="row">
+                    @if (Session["Member"] != null)
+                    {
+                        <div class="col-md-4 order-md-2 mb-4 col-md-offset-2">
+                            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                                <span class="text-muted">購物車清單</span>
+                            </h4>
+                            <ul class="list-group mb-3">
+                                @foreach (var product in Model.CartProducts)
+                                {
+                                    var productQuantity = Model.CartProductIDs.Where(productID => productID == product.ID).Count();
 
-                                <li class="list-group-item d-flex justify-content-between" data-id="@product.ID">
-                                    <div>
-                                        <h6 class="my-0">@product.Name - 數量: @productQuantity</h6>
-                                    </div>
-                                    <span class="text-muted">單價:NT$ @product.Price - 小計:NT$ @(productQuantity * product.Price)</span>
-                                    <a class="DeleteCart" data-id="@product.ID">刪除</a>
+                                    <li class="list-group-item d-flex justify-content-between" data-id="@product.ID">
+                                        <div>
+                                            <h6 class="my-0">@product.Name - 數量: @productQuantity</h6>
+                                        </div>
+                                        <span class="text-muted">單價:NT$ @product.Price - 小計:NT$ @(productQuantity * product.Price)</span>
+                                        <a class="DeleteCart" data-id="@product.ID">刪除</a>
+                                    </li>
+                                }
+
+                                <li class="list-group-item d-flex justify-content-between" style="text-align: right">
+                                    <span>總價:</span>
+                                    <strong>NT$ @Model.CartProducts.Sum(x => x.Price * Model.CartProductIDs.Where(productID => productID == x.ID).Count())</strong>
                                 </li>
-                            }
-
-                            <li class="list-group-item d-flex justify-content-between" style="text-align: right">
-                                <span>總價:</span>
-                                <strong>NT$ @Model.CartProducts.Sum(x => x.Price * Model.CartProductIDs.Where(productID => productID == x.ID).Count())</strong>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 order-md-1">
-                        <h4 class="mb-3">會員資料</h4>
-                        <form class="needs-validation" novalidate="">
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="UserId">姓名</label>
-                                    <input type="text" class="form-control" id="UserId" placeholder="userId" value="@Model.User.UserId" required="">
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-6 mb-3" style="margin-top: 20px">
-                                    <label for="UserEmail">信箱</label>
-                                    <input type="email" class="form-control" id="UserEmail" placeholder="email@gmail.com" value="@Model.User.UserEmail" required="">
-                                </div>
-                            </div>
-
-                            <hr class="mb-4">
-                            <button id="placeOrderBtn" class="col-md-4 btn btn-primary btn-lg" type="button">建立訂單</button>
-                        </form>
-                    </div>
-                }
-                else
-                {
-                    <div class="col-md-4 order-md-2 mb-4 col-md-offset-4">
-                        <h4 class="d-flex justify-content-between align-items-center mb-3">
-                            <span class="text-muted">購物車清單</span>
-                        </h4>
-                        <ul class="list-group mb-3">
-                            @foreach (var product in Model.CartProducts)
-                            {
-                                var productQuantity = Model.CartProductIDs.Where(productID => productID == product.ID).Count();
-
-                                <li class="list-group-item d-flex justify-content-between" data-id="@product.ID">
-                                    <div>
-                                        <h6 class="my-0">@product.Name - 數量: @productQuantity</h6>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 order-md-1">
+                            <h4 class="mb-3">會員資料</h4>
+                            <form class="needs-validation" novalidate="">
+                                <div class="row">
+                                    <div class="col-md-6 mb-3">
+                                        <label for="UserId">姓名</label>
+                                        <input type="text" class="form-control" id="UserId" placeholder="userId" value="@Model.User.UserId" required="">
                                     </div>
-                                    <span class="text-muted">單價:NT$ @product.Price - 小計:NT$ @(productQuantity * product.Price)</span>
-                                    <a class="DeleteCart" data-id="@product.ID">刪除</a>
-                                </li>
-                            }
+                                </div>
 
-                            <li class="list-group-item d-flex justify-content-between">
-                                <span>總價</span>
-                                <strong>NT$ @Model.CartProducts.Sum(x => x.Price * Model.CartProductIDs.Where(productID => productID == x.ID).Count())</strong>
-                            </li>
-                        </ul>
-                    </div>
-                }
+                                <div class="row">
+                                    <div class="col-md-6 mb-3" style="margin-top: 20px">
+                                        <label for="UserEmail">信箱</label>
+                                        <input type="email" class="form-control" id="UserEmail" placeholder="email@gmail.com" value="@Model.User.UserEmail" required="">
+                                    </div>
+                                </div>
+
+                                <hr class="mb-4">
+                                <button id="placeOrderBtn" class="col-md-4 btn btn-primary btn-lg" type="button">建立訂單</button>
+                            </form>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-4 order-md-2 mb-4 col-md-offset-4">
+                            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                                <span class="text-muted">購物車清單</span>
+                            </h4>
+                            <ul class="list-group mb-3">
+                                @foreach (var product in Model.CartProducts)
+                                {
+                                    var productQuantity = Model.CartProductIDs.Where(productID => productID == product.ID).Count();
+
+                                    <li class="list-group-item d-flex justify-content-between" data-id="@product.ID">
+                                        <div>
+                                            <h6 class="my-0">@product.Name - 數量: @productQuantity</h6>
+                                        </div>
+                                        <span class="text-muted">單價:NT$ @product.Price - 小計:NT$ @(productQuantity * product.Price)</span>
+                                        <a class="DeleteCart" data-id="@product.ID">刪除</a>
+                                    </li>
+                                }
+
+                                <li class="list-group-item d-flex justify-content-between">
+                                    <span>總價</span>
+                                    <strong>NT$ @Model.CartProducts.Sum(x => x.Price * Model.CartProductIDs.Where(productID => productID == x.ID).Count())</strong>
+                                </li>
+                            </ul>
+                        </div>
+                    }
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <script>
     $(".DeleteCart").click(function () {
@@ -113,6 +111,7 @@
         $.cookie("CartProducts", result.join('-'), { path: '/' }); // cookie CartProducts 為 result 內容
 
         swal("完成", "產品已從購物車清單刪除", "success").then(() => {
+            updateCartProducts();
             window.location.reload();
         });
     });
@@ -145,7 +144,7 @@
 }
 else
 {
-    <div>
+    <div style=" padding: 80px 0px 30px 0px">
         <b>購物車清單無產品</b>
     </div>
 }
